# ImageToAscii

./: CMakeLists.txt  README.md
inc/: Image.hpp  OpenCvImage.hpp
src/: OpenCvImage.cpp  main.cpp
